# kanna-v2

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  ROADMAP.md  VERSION  package.json  pnpm-lock.yaml  turbo.json
.cargo/: config.toml
.kanna/: config.json
.kanna/agents/agent-factory/: AGENT.md
.kanna/agents/implement/: AGENT.md
.kanna/agents/merge/: AGENT.md
.kanna/agents/pipeline-factory/: AGENT.md
.kanna/agents/pr/: AGENT.md
.kanna/tasks/ship/: agent.md
apps/desktop/: bunfig.toml  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.vue  PtyTest.vue  dialog.ts  env.d.ts  invoke.ts  listen.ts  main.ts  tauri-mock.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: daemon_client.rs  lib.rs
apps/desktop/src-tauri/src/commands/: agent.rs  daemon.rs  fs.rs  git.rs  mod.rs  shell.rs
apps/desktop/src-tauri/tests/: agent_cli_integration.rs
apps/mobile/: index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/scripts/: ios-deploy.sh
apps/mobile/src/: App.vue  main.ts
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: commands.rs  lib.rs  relay_client.rs
crates/claude-agent-sdk/: Cargo.toml
crates/claude-agent-sdk/src/: error.rs  session.rs
crates/claude-agent-sdk/src/types/: control.rs  messages.rs  mod.rs  options.rs  permissions.rs
crates/daemon/: Cargo.toml  DESIGN.md  SPEC.md  build.rs
crates/daemon/src/: fd_transfer.rs  main.rs  protocol.rs  pty.rs  session.rs  socket.rs
crates/daemon/tests/: handoff.rs  reconnect.rs
crates/kanna-cli/src/: main.rs
crates/kanna-hook/: Cargo.toml
crates/kanna-hook/src/: main.rs
crates/kanna-server/: Cargo.toml
crates/kanna-server/src/: commands.rs  config.rs  daemon_client.rs  db.rs  main.rs  register.rs  relay_client.rs
crates/tauri-plugin-delta-updater/: Cargo.toml
crates/tauri-plugin-delta-updater/src/: lib.rs
docs/superpowers/plans/: 2026-03-19-pinnable-tasks.md  2026-03-19-pinnable-tasks.md.tasks.json  2026-03-20-pipeline-simplification.md  2026-03-20-pipeline-simplification.md.tasks.json  2026-03-21-merge-queue.md.tasks.json  2026-03-21-remove-repo-from-sidebar.md  2026-03-21-remove-repo-from-sidebar.md.tasks.json  2026-03-22-app-vue-pinia-refactor.md  2026-03-22-app-vue-pinia-refactor.md.tasks.json  2026-03-22-blocked-task.md  2026-03-22-blocked-task.md.tasks.json  2026-03-22-context-shortcut-help.md  2026-03-22-context-shortcut-help.md.tasks.json  2026-03-22-custom-agent-tasks.md  2026-03-22-custom-agent-tasks.md.tasks.json  2026-03-22-debounced-mark-as-read.md  2026-03-22-debounced-mark-as-read.md.tasks.json  2026-03-22-diff-view-keyboard-nav.md  2026-03-22-diff-view-keyboard-nav.md.tasks.json  2026-03-22-operator-telemetry.md  2026-03-22-operator-telemetry.md.tasks.json  2026-03-22-regression-testing.md  2026-03-22-regression-testing.md.tasks.json  2026-03-22-task-navigation-history.md  2026-03-22-task-navigation-history.md.tasks.json  2026-03-22-toast-notifications.md  2026-03-22-toast-notifications.md.tasks.json  2026-03-23-i18n-implementation.md  2026-03-23-kanna-mobile.md  2026-03-23-kanna-mobile.md.tasks.json  2026-03-23-repo-import-flow.md  2026-03-23-repo-import-flow.md.tasks.json  2026-03-23-tree-explorer.md  2026-03-23-tree-explorer.md.tasks.json  2026-03-24-inline-search.md  2026-03-24-inline-search.md.tasks.json  2026-03-24-shortcut-menu-toggle.md  2026-03-24-shortcut-menu-toggle.md.tasks.json  2026-03-25-concurrent-daemon-connections.md  2026-03-25-concurrent-daemon-connections.md.tasks.json  (+18 more)
docs/superpowers/specs/: 2026-03-18-e2e-test-suite-design.md  2026-03-18-feature-parity-design.md  2026-03-19-maximize-toggle-design.md  2026-03-19-pinnable-tasks-design.md  2026-03-20-markdown-preview-design.md  2026-03-20-pipeline-simplification-design.md  2026-03-21-database-backup-design.md  2026-03-21-merge-queue-design.md  2026-03-21-remove-repo-from-sidebar-design.md  2026-03-22-app-vue-pinia-refactor-design.md  2026-03-22-blocked-task-design.md  (+25 more)
scripts/: clean.sh  dev.sh  install.sh  mobile-dev.sh  setup.sh  ship.sh  stage-sidecars.sh  sync-version.sh
services/relay/: Dockerfile  package.json  tsconfig.json
tests/cli-contract/: package.json
tests/pty-restore-test/: Cargo.toml  index.html
tests/pty-test/: controls.test.mjs  package.json  server.mjs  server.ts  spawn.test.mjs  test.html
(+97 files in other folders)
