[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
dashmap = "6"
