[package]
name = "kanna-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
dirs = "6"
kanna-daemon = { path = "../daemon" }
