[package]
name = "kanna-mobile"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
log = "0.4"

[lib]
name = "kanna_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
